--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,5 @@ services:
   - docker
 
 script:
-  - cd docker && docker build .
+  - cd docker && docker build . --tag opalmer/gerritstats:travis
+  - ./test.sh
