--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,5 @@ services:
   - docker
 
 script:
-  - make -C docker build BUILD_TAGS="-t opalmer/gerritstats:travis"
+  - make -C docker build BUILD_TAGS="-t opalmer/gerrittest:travis"
   - ./test.sh
