--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,7 @@ services:
 
 script:
   - make -C docker build
-  - ./test.sh
+  - make build
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
