--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,7 @@
-language: go
 sudo: required
-
-go:
-    - 1.7
 
 services:
   - docker
 
 script:
-  - make -C docker build
-
-after_success:
-  - bash <(curl -s https://codecov.io/bash)
+  - make check
