--- a/docker/config/gerrit.config
+++ b/docker/config/gerrit.config
@@ -6,6 +6,8 @@
   database = db/ReviewDB
 [auth]
   type = DEVELOPMENT_BECOME_ANY_ACCOUNT
+  gitBasicAuthPolicy = HTTP
+  gitBasicAuth = true
 [index]
   type = LUCENE
 [sshd]
