--- a/docker/config/gerrit.config
+++ b/docker/config/gerrit.config
@@ -5,7 +5,8 @@
   type = H2
   database = db/ReviewDB
 [auth]
-  type = DEVELOPMENT_BECOME_ANY_ACCOUNT
+  type = HTTP
+  httpHeader = X-User
   gitBasicAuthPolicy = HTTP
   gitBasicAuth = true
 [index]
