--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,18 @@
+language: go
 sudo: required
+
+go:
+    - 1.8
 
 services:
   - docker
 
+before_install:
+  - sudo apt-get update
+  - sudo apt-get -y -o Dpkg::Options::="--force-confnew" install docker-ce
+
 script:
   - make check
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
