locahost -> 127.0.0.1 (should be more consistent)

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -6,7 +6,7 @@ ARG GERRIT_HOME=/var/gerrit
 ARG GERRIT_SITE=${GERRIT_HOME}
 ARG GERRIT_USER=gerrit
 ARG GERRIT_INIT_ARGS=""
-ARG GERRIT_CANONICAL_URL="http://localhost:8080/"
+ARG GERRIT_CANONICAL_URL="http://127.0.0.1:8080/"
 ENV GERRIT_HOME ${GERRIT_HOME}
 ENV GERRIT_SITE ${GERRIT_SITE}
 ENV GERRIT_CANONICAL_URL ${GERRIT_CANONICAL_URL}
