fix host name to match container

--- a/docker/config/gerrit.config
+++ b/docker/config/gerrit.config
@@ -1,6 +1,6 @@
 [gerrit]
   basePath = git
-  canonicalWebUrl = http://localhost:8080/
+  canonicalWebUrl = http://127.0.0.1:8080/
 [database]
   type = H2
   database = db/ReviewDB
