--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -47,7 +47,7 @@ required = ["github.com/docker/distribution/reference"]
 
 [[constraint]]
   name = "github.com/docker/docker"
-  version = "17.5.0-ce-rc3"
+  version = "v17.05.0-ce.*"
 
 [[constraint]]
   name = "github.com/docker/go-connections"
