--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -34,7 +34,7 @@ required = ["github.com/docker/distribution/reference"]
   version = "0.4.5"
 
 [[constraint]]
-  name = "github.com/sirupsen/logrus"
+  name = "github.com/Sirupsen/logrus"
   version = "1.0.2"
 
 [[constraint]]
