--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -35,7 +35,7 @@ required = ["github.com/docker/distribution/reference"]
 
 [[constraint]]
   name = "gopkg.in/src-d/go-git.v4"
-  version = "4"
+  version = "4.*"
 
 [[constraint]]
   name = "github.com/Sirupsen/logrus"
