upgrade default gerrit version, test across multiple images
Change-Id: I6d66f631addb29ac1f8c57a2f759b4d6c1cb3d2b

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,12 @@ language: go
 sudo: required
 
 go:
-    - 1.8
-    - 1.9
+  - 1.8
+  - 1.9
+
+env:
+  - GERRITTEST_DOCKER_IMAGE=opalmer/gerrittest:2.14.2
+  - GERRITTEST_DOCKER_IMAGE=opalmer/gerrittest:2.14.3
 
 services:
   - docker
