--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -23,18 +23,26 @@
 # NOTE: The below dependencies are mainly used for testing
 # purposes. This mirrors the dependencies required of
 
-required = ["github.com/docker/distribution/reference"]
+required = [
+    "github.com/docker/distribution/reference",
+    "github.com/opencontainers/runc",
+    "github.com/docker/go-connections"
+]
 
 [[constraint]]
   name = "github.com/opalmer/dockertest"
-  version = "0.3.7"
+  version = "0.3.9"
+
+[[constraint]]
+  name = "github.com/opalmer/logrusutil"
+  version = "1.0.0"
 
 [[constraint]]
   name = "github.com/Microsoft/go-winio"
   version = "0.4.5"
 
 [[constraint]]
-  name = "github.com/Sirupsen/logrus"
+  name = "github.com/sirupsen/logrus"
   version = "1.0.3"
 
 [[constraint]]
@@ -51,11 +59,7 @@ required = ["github.com/docker/distribution/reference"]
 
 [[constraint]]
   name = "github.com/docker/docker"
-  version = "v17.05.0-ce.*"
-
-[[constraint]]
-  name = "github.com/docker/go-connections"
-  version = "0.3.0"
+  revision = "13fec0607394f7c6da0148f8d513b6fcbf7cce61"
 
 [[constraint]]
   name = "github.com/docker/go-units"
@@ -67,20 +71,16 @@ required = ["github.com/docker/distribution/reference"]
 
 [[constraint]]
   name = "github.com/opencontainers/go-digest"
-  version = "1.0.0-rc0"
-
-[[constraint]]
-  name = "github.com/pkg/errors"
-  version = "0.8.0"
-
-[[constraint]]
-  branch = "master"
-  name = "golang.org/x/net"
-
-[[constraint]]
-  branch = "master"
-  name = "golang.org/x/sys"
+  version = "0.3.0"
 
 [[constraint]]
   branch = "v1"
   name = "gopkg.in/check.v1"
+
+[[constraint]]
+  name = "github.com/opencontainers/runc"
+  version = "1.0.0-rc4"
+
+[[constraint]]
+  name = "github.com/docker/go-connections"
+  version = "0.3.0"
