--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -28,7 +28,10 @@ required = [
     "github.com/docker/distribution/reference",
     "github.com/opencontainers/runc",
     "github.com/docker/go-connections",
-    "github.com/docker/docker"
+    "github.com/docker/docker/api/types",
+    "github.com/docker/docker/api/types/container",
+    "github.com/docker/docker/api/types/filters",
+    "github.com/docker/docker/api/types/network"
 ]
 
 [[constraint]]
