--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ go:
 env:
   - GERRITTEST_DOCKER_IMAGE=opalmer/gerrittest:2.14.2
   - GERRITTEST_DOCKER_IMAGE=opalmer/gerrittest:2.14.3
+  - GERRITTEST_DOCKER_IMAGE=opalmer/gerrittest:2.14.4
 
 services:
   - docker
